--- a/backend/db.yml
+++ b/backend/db.yml
@@ -1,7 +1,7 @@
 db:
   name: bi
   type: mysql
-  user: growthdb
-  password: devhz123456
-  url: 172.17.60.131
+  user: root
+  password: MyNewPass@123
+  url: localhost
   port: 3306
