--- a/frontend/vue-element-admin/package.json
+++ b/frontend/vue-element-admin/package.json
@@ -39,7 +39,7 @@
     "connect": "3.6.6",
     "driver.js": "0.5.2",
     "dropzone": "5.2.0",
-    "echarts": "3.8.5",
+    "echarts": "^3.8.5",
     "element-ui": "2.3.2",
     "file-saver": "1.3.3",
     "font-awesome": "4.7.0",
@@ -54,7 +54,9 @@
     "showdown": "1.8.5",
     "simplemde": "1.11.2",
     "sortablejs": "1.7.0",
+    "v-charts": "^1.17.9",
     "vue": "2.5.10",
+    "vue-codemirror": "^4.0.5",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
     "vue-multiselect": "2.0.8",
